deploy/o11n/k8s/azure/appmanager-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: dev-namespace
  annotations:
    kompose.cmd: kompose-1.17.0 convert
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: appmanager
  name: appmanager
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: appmanager
    spec:
      containers:
      - env:
        - name: REST_API_URL_DATA
          value: http://datastore.dev-namespace.svc.cluster.local:8118/
        image: cardiacmodelling/ap-nimbus-app-manager:0.0.5
        name: appmanager
        ports:
        - containerPort: 8080
        resources: {}
        #imagePullPolicy: Always
      restartPolicy: Always
status: {}
