deploy/o11n/k8s/azure/database-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: dev-namespace
  annotations:
    kompose.cmd: kompose-1.17.0 convert
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: database
  name: database
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: database
    spec:
      containers:
      - args:
        - mongod
        - --smallfiles
        - --logpath=/var/log/mongodb/mongodb.log
        ports:
        - containerPort: 27017
        image: mongo:4.0
        name: database
        resources: {}
        #imagePullPolicy: Always
      restartPolicy: Always
status: {}
