deploy/o11n/k8s/azure/datastore-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: dev-namespace
  annotations:
    kompose.cmd: kompose-1.17.0 convert
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: datastore
  name: datastore
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: datastore
    spec:
      containers:
      - env:
        - name: MONGO_INITDB_ROOT_PASSWORD
          value: example
        - name: MONGO_INITDB_ROOT_USERNAME
          value: example
        - name: PORT
          value: "8118"
        - name: WAIT_HOSTS
          value: database.dev-namespace.svc.cluster.local:27017
        image: cardiacmodelling/ap-nimbus-datastore:0.0.4
        name: datastore
        ports:
        - containerPort: 8118
        resources: {}
        #imagePullPolicy: Always
      restartPolicy: Always
status: {}
