deploy/o11n/k8s/azure/appmanager-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dev-namespace
  annotations:
    kompose.cmd: kompose-1.17.0 convert
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: appmanager
  name: appmanager
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    io.kompose.service: appmanager
status:
  loadBalancer: {}
