deploy/o11n/k8s/azure/clientdirect-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dev-namespace
  annotations:
    kompose.cmd: kompose-1.17.0 convert
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: clientdirect
  name: clientdirect
spec:
  type: NodePort
  ports:
  - port: 4200
    targetPort: 4200
    protocol: TCP
  selector:
    io.kompose.service: clientdirect
status:
  loadBalancer: {}
