deploy/o11n/k8s/azure/database-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dev-namespace
  name: database
  labels:
    io.kompose.service: database
spec:
  clusterIP: None
  ports:
  - name: "27017"
    port: 27017
    targetPort: 27017
  selector:
    io.kompose.service: database
