deploy/o11n/k8s/azure/datastore-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dev-namespace
  annotations:
    kompose.cmd: kompose-1.17.0 convert
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: datastore
  name: datastore
spec:
  type: NodePort
  ports:
  - port: 8118
    targetPort: 8118
    protocol: TCP
  selector:
    io.kompose.service: datastore
status:
  loadBalancer: {}
