deploy/o11n/k8s/azure/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ap-nimbus-ingress
  namespace: dev-namespace
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # Note: Redirect redirects to 443 not 30443!
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: clientdirect
          servicePort: 4200
      - path: /am/
        backend:
          serviceName: appmanager
          servicePort: 8080
      - path: /api/
        backend:
          serviceName: datastore
          servicePort: 8118
